# TreySim4

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  playground.hpp
resources/: new.mtl  test.mtl
resources/Trey/body/: metadata.json
resources/Trey/hair/: metadata.json
resources/Trey/head/: head.mtl
resources/Trey/particles/kick/: metadata.json
resources/dog/boards/: metadata.json
resources/dog/boards/walk/: metadata.json
resources/dog2/boards/: metadata.json
resources/duck/statues/body/: body.mtl  metadata.json
resources/fonts/daniel/: metadata.json
resources/music/: _readme_and_license.txt
resources/noises/: liscenses.txt
resources/parks/arena/generate/: metadata.json
resources/parks/cloud/: metadata.json
resources/parks/grassy/generate/: metadata.json
resources/parks/test/: metadata.json
resources/terrain/grassy/: metadata.json
resources/terrain/grassy2/: metadata.json
resources/terrain/test/: metadata.json
resources/testCube/two/: metadata.json
shaders/: board.vert  statue.vert
src/: collision.cpp  collision.hpp  dog.cpp  dog.hpp  dropParty.cpp  dropParty.hpp  duck.cpp  duck.hpp  duckParticles.cpp  duckParticles.hpp  facing.cpp  facing.hpp  healthBar.cpp  healthBar.hpp  hud.cpp  hud.hpp  items.cpp  items.hpp  main.cpp  menu.cpp  menu.hpp  park.cpp  park.hpp  particles.cpp  particles.hpp  playground.hpp  portal.hpp  puppyMill.cpp  puppyMill.hpp  stage.cpp  stage.hpp  terrain.cpp  terrain.hpp  text.cpp  text.hpp  textBox.cpp  textBox.hpp  trey.cpp  trey.hpp  treyParticles.cpp  (+1 more)
(+5 files in other folders)
